# python-test1

./: pyproject.toml
.github/workflows/: release.yml
src/python_test1/: __init__.py
tests/: smoke_test.py
