[project]
name = "python-test1"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alexandru Mărășteanu", email = "hello@alexei.ro" }
]
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"
